Tidying up code into functions
General tidying of code. Utilization of Johannes' function. Performance uptimization.

--- a/R/Open_chest_gam.Rmd
+++ b/R/Open_chest_gam.Rmd
@@ -1,19 +1,12 @@
 ---
-title: "ting_og_sager"
+title: "GAM for thoracotomy waveforms"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-setwd("C:/Users/caspe/OneDrive - Aarhus Universitet/Dokumenter/Dataprojekt/Projekt/git_simon/DataProject-GAM/R")
-
-pt03 <- readRDS("C:/Users/caspe/OneDrive - Aarhus Universitet/Dokumenter/Dataprojekt/Projekt/git_simon/DataProject-GAM/Datasets/thoracotomy_waveforms_prelim/pt03.rds")
-```
-
-
-## test med indeks for thorakotomi
-
-```{r}
+```{r message=FALSE, warning=FALSE}
+rm(list = ls()) # clearing workspace
 library(waveformtools)
 library(tidyverse)
 library(mgcv)
@@ -23,199 +16,101 @@ library(shinythemes)
 library(shinyTime)
 library(data.table)
 library(readr)
+library(dygraphs)
 library(dplyr)
 ```
 
-created new dataframe where we can add appropriate indexes/variables
 
-```{r}
-pt03_ <- data.frame(pt03$open_chest$CVP) # extract cvp numbers from data
-pt03_ <- pt03_ %>% mutate(ms = 0) # add time index variable
-
-names(pt03_)[1] <- "CVP"
-
-qrs_ms <- sort(pt03$open_chest$QRSmarker_ms)
+```{r loading data}
+filepath <- "../Datasets/thoracotomy_waveforms_prelim/pt03.RDS"
+full_dataload <- readRDS(filepath, refhook = NULL)
 ```
 
-there are 125 measurements each second -> 1/125 = 0.008. This means that there are 0.008 seconds between each measurement. To get ms we multiply with 1.000.
 
-```{r}
-for (i in 2:length(pt03_$CVP)){
-  pt03_$ms[i] <- pt03_$ms[i-1] + 8 # ms between each observation (0.008*1000)
+```{r creating functions}
+add_time <- function(data, ms_between_obs = 8, time_origin = "2021-09-03") {
+  #' adds a column containing time with increments of ms_between_obs
+  #' data:             a dataframe like structure
+  #' ms_between_obs:   the amount of milliseconds between each cycle
+  df <- tibble(data)
+  df$time_ms <- seq(0, nrow(df)*ms_between_obs-ms_between_obs, ms_between_obs)
+  df$time_s <- df$time_ms / 1000
+  return(df)
+}
+
+create_patient <- function(filepath) {
+  #' creates a dataframe containing cvp and time in ms and s for open chest
+  #' filepath:        the path of the patient file
+  dataload <- readRDS(filepath, refhook = NULL)
+  patient <- data.frame(open_chest_cvp = dataload$open_chest$CVP) # extract cvp numbers from data
+  patient <- add_time(patient)
+  return(patient)
 }
 ```
 
-this code is to give an index to each measurement for which position it has in its heartbeat cycle.
 
-```{r}
-pt03_ <- pt03_ %>% mutate(qrs_idx = 1)
-
-q <- 2
-z <- 2
-i <- 1
-
-while (i < length(qrs_ms)){
-  if (qrs_ms[i] > pt03_$ms[q]){
-    pt03_$qrs_idx[q] <- z
-    z <- z + 1
-    q <- q + 1
-  }
-  else {
-    i <- i + 1
-    pt03_$qrs_idx[q] <- 1
-    z <- 2
-    q <- q + 1
-  }
-}
+There are 125 measurements of CVP each second -> 1/125s = 0.008/s. 
+This means that there are 0.008 seconds between each measurement. 
+To get ms we simply multiply by 1.000.
 
 
+
+```{r initializing patient}
+pt3 <- create_patient(filepath)
+qrs_ms <- full_dataload$open_chest$QRSmarker_ms
+
+# The following code is to give an index to each measurement for which position it has in its heartbeat 
+# cycle. Also removes rows containing NAs giving only rows where we know start and end of cycle
+pt3 <- na.omit(gen_annotation_index(pt3, qrs_ms, 'time_ms', 'qrs')) 
+pt3 <- na.omit(gen_annotation_index(pt3, seq(0, nrow(pt3)*8, 5000), 'time_ms', 'insp'))
 ```
 
-Only data where we know we know start and end of heartbeat cycle
 
-```{r}
-for (i in 2:length(pt03_$CVP)){
-  if (pt03_$qrs_idx[i] == 1){
-    m <- i
-    break
-  }
-}
+Inspect data:
 
-for (i in length(pt03_$CVP):1){
-  if (pt03_$qrs_idx[i] != 1){
-    n <- i
-    break
-  }
-}
-
-new_pt03 <- pt03_ %>% slice(m:n)
+```{r inspecting cvp over time}
+dygraph(data = pt3[,c("time_s","open_chest_cvp")])
 ```
 
-convert ms to second
 
-```{r}
-new_pt03 <- new_pt03 %>% mutate(sec = ms/1000)
+We now slice after finding appropriate time slot in the above inspection. 
+Below the periode between 130s and 190s has been selected.
+
+```{r slicing data}
+pt3_sliced <- pt3[pt3$time_s > 130 & pt3$time_s < 190,]
 ```
 
-for the relative position in heartbeat cycle
-
-```{r}
-new_pt03 <- new_pt03 %>% mutate(qrs_rel_idx = 1)
-
-idx_of_first <- 1
-for (i in 1:(length(new_pt03$CVP)-1)){
-  if (new_pt03$qrs_idx[i+1] == 1){
-    denom <- new_pt03$qrs_idx[i]
-    for (j in idx_of_first:i){
-      new_pt03$qrs_rel_idx[j] <- new_pt03$qrs_idx[j]/denom
-    }
-    idx_of_first <- i+1
-  }
-}
-
-for (i in length(new_pt03$CVP):1){
-  if (new_pt03$qrs_idx[i] == 1){
-    denom <- new_pt03$qrs_idx[length(new_pt03$CVP)]
-    for (j in i:length(new_pt03$CVP)){
-      new_pt03$qrs_rel_idx[j] <- new_pt03$qrs_idx[j]/denom
-    }
-  break}
-}
-```
-
-for position in respiration cycle
-
-```{r}
-new_1pt03 <- new_pt03  %>% slice(187:length(new_pt03$CVP)) %>% mutate(insp_idx = 1)
-
-index_start_insp <- 1
-for (i in 2:length(new_1pt03$CVP)){
-  time_start <- new_1pt03$sec[index_start_insp]
-  if ((new_1pt03$sec[i] - time_start) > 5) {
-    index_start_insp <- i
-  }
-  else {
-    new_1pt03$insp_idx[i] <- new_1pt03$insp_idx[i-1] + 1
-  }
-}
-```
-
-for relative position in respiration cycle
-
-```{r}
-new_1pt03 <- new_1pt03 %>% mutate(insp_rel_idx = 1)
-
-idx_of_first <- 1
-for (i in 1:(length(new_1pt03$CVP)-1)){
-  if (new_1pt03$insp_idx[i+1] == 1){
-    denom <- new_1pt03$insp_idx[i]
-    for (j in idx_of_first:i){
-      new_1pt03$insp_rel_idx[j] <- new_1pt03$insp_idx[j]/denom
-    }
-    idx_of_first <- i+1
-  }
-}
-
-for (i in length(new_1pt03$CVP):1){
-  if (new_1pt03$insp_idx[i] == 1){
-    denom <- new_1pt03$insp_idx[length(new_pt03$CVP)]
-    for (j in i:length(new_1pt03$CVP)){
-      new_1pt03$insp_rel_idx[j] <- new_1pt03$insp_idx[j]/denom
-    }
-  break}
-}
-```
-
-inspect data - note: time variable is not relevant for this graph. Only used to find data with less noise.
-
-```{r}
-new_1pt03$CVP %>% 
-  dygraph_signal()
-```
-
-slice after finding appropriate time slot
-
-```{r}
-sliced_pt03 <- new_1pt03 %>% slice(1:7500) %>% mutate(time_s_s = 0)
-
-for (i in 2:length(sliced_pt03$CVP)){
-  sliced_pt03$time_s_s[i] <- sliced_pt03$time_s_s[i-1] + 0.008 # sec between each observation (0.008)
-}
-```
 
 Gam-modelling
 
-```{r}
-
+```{r generating GAM object}
 cvp_gam <- bam(
-        CVP ~ s(qrs_rel_idx, bs = 'cc', k = 50) +
-            s(insp_rel_idx, bs = 'cc', k = 30) +
+        open_chest_cvp ~ s(qrs_rel_index, bs = 'cc', k = 50) +
+            s(insp_rel_indx, bs = 'cc', k = 30) +
             ti(
-                qrs_rel_idx,
-                insp_rel_idx,
+                qrs_rel_index,
+                insp_rel_index,
                 bs = c('cc', 'cc'),
                 k = c(20, 10)
             ) +
-            s(time_s_s),
+            s(time_s),
         method = 'REML',
-        data = sliced_pt03,
+        data = pt3_sliced,
         nthreads = 16 # Number of (virtual) cores
     )
-
-
 ```
+
 
 Visualise GAM
 
-```{r, fig.width = 10, fig.height = 7, out.width="100%"}
+```{r visualising gam object, fig.width = 10, fig.height = 7, out.width="100%"}
 gratia::draw(cvp_gam)
 ```
 
 
+Mads' Shiny. Work in progress.
 
-Mads' Shiny. Work in progress
-
-```{r}
+```{r shiny app}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
@@ -284,18 +179,18 @@ server <- function(input, output) {
   output$samlet_plots <- renderPlot({
     
     cvp_gam <- bam(
-        CVP ~ s(qrs_rel_idx, bs = 'cc', k = input$qrs_rel_index) +
-            s(insp_rel_idx, bs = 'cc', k = input$insp_rel_index) +
+        open_chest_cvp ~ s(qrs_rel_index, bs = 'cc', k = input$qrs_rel_index) +
+            s(insp_rel_index, bs = 'cc', k = input$insp_rel_index) +
             ti(
-                qrs_rel_idx,
-                insp_rel_idx,
+                qrs_rel_index,
+                insp_rel_index,
                 bs = c('cc', 'cc'),
                 k = c(input$interaction_index1, input$interaction_index2)
             ) +
-            s(time_s_s),
+            s(time_s),
         method = input$method,
         #rho = 0.95,
-        data = sliced_pt03,
+        data = pt3_sliced,
         nthreads = 16 # Number of (virtual) cores
     )
     gratia::draw(cvp_gam)
