--- a/R/Statistical_tests.Rmd
+++ b/R/Statistical_tests.Rmd
@@ -24,7 +24,8 @@ setwd("C:/Users/caspe/OneDrive - Aarhus Universitet/Dokumenter/Dataprojekt/Proje
 ## Load dataset
 
 ```{r}
-filepath <- "../Datasets/thoracotomy_waveforms/pt18.RDS"
+rm(list = ls())
+filepath <- "../Datasets/thoracotomy_waveforms/pt03.RDS"
 full_dataload <- readRDS(filepath, refhook = NULL)
 ```
 
@@ -43,20 +44,20 @@ create_patient <- function(filepath) {
   #' creates a dataframe containing cvp and time in ms and s for open chest
   #' filepath:        the path of the patient file
   dataload <- readRDS(filepath, refhook = NULL)
-  patient <- data.frame(open_chest_cvp = dataload$open_chest$CVP) # extract cvp numbers from data
+  patient <- data.frame(closed_chest_cvp = dataload$closed_chest$CVP) # extract cvp numbers from data
   patient <- add_time(patient)
   return(patient)
 }
 ```
 
 ```{r}
-pt18 <- create_patient(filepath)
-qrs_ms <- full_dataload$open_chest$QRSmarker_ms
+pt03 <- create_patient(filepath)
+qrs_ms <- full_dataload$closed_chest$QRSmarker_ms
 
 # The following code is to give an index to each measurement for which position it has in its heartbeat 
 # cycle. Also removes rows containing NAs giving only rows where we know start and end of cycle
-pt18 <- na.omit(gen_annotation_index(pt18, qrs_ms, 'time_ms', 'qrs')) 
-pt18 <- na.omit(gen_annotation_index(pt18, seq(0, nrow(pt18)*8, 5000), 'time_ms', 'insp'))
+pt03 <- na.omit(gen_annotation_index(pt03, qrs_ms, 'time_ms', 'qrs')) 
+pt03 <- na.omit(gen_annotation_index(pt03, seq(0, nrow(pt03)*8, 5000), 'time_ms', 'insp'))
 ```
 
 
@@ -79,20 +80,20 @@ Again heavy autocorrelation. At lags up to 45 we have autocorrelation. This is e
 Inspect data to find stable period of measurements:
 
 ```{r inspecting cvp over time}
-dygraph(data = pt18[,c("time_s","open_chest_cvp")])
+dygraph(data = pt03[,c("time_s","closed_chest_cvp")])
 ```
 
 Stable period (130 - 190): 
 
 ```{r slicing data}
-pt18_sliced <- pt18[pt18$time_s > 200 & pt18$time_s < 300,]
+pt_sliced <- pt03[pt03$time_s > 50 & pt03$time_s < 134,]
 ```
 
 We try to add a rho-term to our bam-modelling to account for this autocorrelation. We expect this to reduce the complexity and the wiggliness of our smooth effects - on the other hand we could lose some confidence in our estimates.
 
 ```{r}
 cvp_gam <- bam(
-        open_chest_cvp ~ s(qrs_rel_index, bs = 'cc', k = 50) +
+        closed_chest_cvp ~ s(qrs_rel_index, bs = 'cc', k = 50) +
             s(insp_rel_index, bs = 'cc', k = 30) +
             ti(
                 qrs_rel_index,
@@ -102,7 +103,7 @@ cvp_gam <- bam(
             ) +
             s(time_s),
         method = 'REML',
-        data = pt18_sliced,
+        data = pt_sliced,
         rho = 0.95,
         nthreads = 16 # Number of (virtual) cores
     )
@@ -147,24 +148,24 @@ We find that our p-value is very low meaning that the possibility of heterosceda
 ### Cross validation
 
 ```{r}
-mses <- data.frame() #Create empty df to store CV squared error values
-scores <- data.frame() #Create empty df to store CV R2 values
-set.seed(42) #Set seed for reproducibility
-k <- 10 #Define number of folds
+mses <- data.frame()  # Create empty df to store CV squared error values
+scores <- data.frame()  # Create empty df to store CV R2 values
+set.seed(42)  # Set seed for reproducibility
+k <- 10  # Define number of folds
 for (i in 1:k) {
   # Create weighting column
-  pt18_sliced$weight <- sample(c(0,1),size=nrow(pt18_sliced),replace=TRUE,prob=c(0.2,0.8)) #0 Indicates testing sample, 1 training sample
+  pt_sliced$weight <- sample(c(0,1),size=nrow(pt_sliced),replace=TRUE,prob=c(0.2,0.8))  # 0 Indicates testing sample, 1 training sample
   
-  #Generate training dataset
-  trainingdata <- pt18_sliced[pt18_sliced$weight == 1, ] #Select test data by weight  
+  # Generate training dataset
+  trainingdata <- pt_sliced[pt_sliced$weight == 1, ]  # Select training data by weight  
 
-  #Generate test dataset
-  testdata <- pt18_sliced[pt18_sliced$weight == 0, ] #Select test data by weight
+  # Generate test dataset
+  testdata <- pt_sliced[pt_sliced$weight == 0, ]  # Select test data by weight
   
-  #Run GAM with MRF
-  #ctrl <- gam.control(nthreads = 6) #Set controls
+  # Run GAM with MRF
+  # ctrl <- gam.control(nthreads = 6) #Set controls
   m <- bam(
-        open_chest_cvp ~ s(qrs_rel_index, bs = 'cc', k = 50) +
+        closed_chest_cvp ~ s(qrs_rel_index, bs = 'cc', k = 50) +
             s(insp_rel_index, bs = 'cc', k = 30) +
             ti(
                 qrs_rel_index,
@@ -176,13 +177,13 @@ for (i in 1:k) {
         method = 'REML',
         data = trainingdata,
         rho = 0.95,
-        nthreads = 16 # Number of (virtual) cores
+        nthreads = 16  # Number of (virtual) cores
     )
   
-  #Predict test data
+  # Predict test data
   pred <- predict(m,newdata=testdata)
-  #Extract MSES
-  mses[i,1] <- mean((pt18_sliced$open_chest_cvp[pt18_sliced$weight==0] - pred)^2)
+  # Extract MSES
+  mses[i,1] <- mean(abs(pt_sliced$closed_chest_cvp[pt_sliced$weight==0] - pred))
   scores[i,1] <- summary(m)$r.sq
 }
 av.mse.GMRF <- mean(mses$V1)
